tests/ui/unexpected_comma.stderr
error: expected expression, found `,`
  --> $DIR/unexpected_comma.rs:13:17
   |
13 |     json!({ "a" , "b": true });
   |                 ^ expected expression

error: aborting due to previous error

